Wrapping entire file in .fm-container
This is to achieve the same level of specificity as used in
style.scss. The lower specificity was causing some styles
to not apply. No other changes were made to the file.

--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -1,4 +1,4 @@
-.fm-loading-overlay {
+.fm-container .fm-loading-overlay {
   background: black;
   background: rgba(0, 0, 0, 0.4);
   -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000, endColorstr=#66000000);
@@ -7,13 +7,12 @@
   width: 100%;
   height: 100%;
   z-index: 999; }
-  .fm-loading-overlay img {
+  .fm-container .fm-loading-overlay img {
     width: 128px;
     height: 128px;
     display: block;
     margin: 150px auto; }
-
-.fm-modal-overlay {
+.fm-container .fm-modal-overlay {
   background: black;
   background: rgba(0, 0, 0, 0.4);
   -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000, endColorstr=#66000000);
@@ -22,7 +21,7 @@
   width: 100%;
   height: 100%;
   z-index: 999; }
-  .fm-modal-overlay .container {
+  .fm-container .fm-modal-overlay .container {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
@@ -34,13 +33,12 @@
     width: 600px;
     margin: 50px auto;
     padding: 10px; }
-    .fm-modal-overlay .container h3 {
+    .fm-container .fm-modal-overlay .container h3 {
       font-size: 18px; }
-    .fm-modal-overlay .container .content {
+    .fm-container .fm-modal-overlay .container .content {
       min-height: 200px;
       font-size: 14px; }
-
-.fm-message-overlay {
+.fm-container .fm-message-overlay {
   background-size: 40px 40px;
   background-image: linear-gradient(135deg, rgba(255, 255, 255, 0.05) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.05) 50%, rgba(255, 255, 255, 0.05) 75%, transparent 75%, transparent);
   box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.4);
@@ -55,19 +53,19 @@
   _position: absolute;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
   animation: animate-bg 5s linear infinite; }
-  .fm-message-overlay.fm-info {
+  .fm-container .fm-message-overlay.fm-info {
     background-color: #4ea5cd;
     border-color: #3b8eb5; }
-  .fm-message-overlay.fm-error {
+  .fm-container .fm-message-overlay.fm-error {
     background-color: #de4343;
     border-color: #c43d3d; }
-  .fm-message-overlay.fm-warning {
+  .fm-container .fm-message-overlay.fm-warning {
     background-color: #eaaf51;
     border-color: #d99a36; }
-  .fm-message-overlay.fm-success {
+  .fm-container .fm-message-overlay.fm-success {
     background-color: #61b832;
     border-color: #55a12c; }
-  .fm-message-overlay .close {
+  .fm-container .fm-message-overlay .close {
     display: block;
     position: absolute;
     top: 15px;
@@ -75,12 +73,12 @@
     width: 30px;
     height: 30px;
     cursor: pointer; }
-  .fm-message-overlay h3 {
+  .fm-container .fm-message-overlay h3 {
     width: 920px;
     margin: 0 auto 5px;
     color: white;
     font-size: 16px; }
-  .fm-message-overlay p {
+  .fm-container .fm-message-overlay p {
     width: 920px;
     margin: 0 auto;
     color: white;
