--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -84,28 +84,28 @@
     color: white;
     font-size: 14px; }
 
-#fm-container p {
+.fm-container p {
   margin: 8px 0;
   padding: 0; }
-#fm-container h1, #fm-container h2, #fm-container h3, #fm-container h4, #fm-container h5, #fm-container h6 {
+.fm-container h1, .fm-container h2, .fm-container h3, .fm-container h4, .fm-container h5, .fm-container h6 {
   margin: 0;
   padding: 0; }
-#fm-container h1 {
+.fm-container h1 {
   margin-top: 12px;
   font-size: 22px; }
-#fm-container h2 {
+.fm-container h2 {
   margin-top: 10px;
   font-size: 20px; }
-#fm-container h3 {
+.fm-container h3 {
   margin-top: 8px;
   font-size: 18px; }
-#fm-container h4 {
+.fm-container h4 {
   margin-top: 6px;
   font-size: 16px; }
-#fm-container h5 {
+.fm-container h5 {
   margin-top: 4px;
   font-size: 14px; }
-#fm-container h6 {
+.fm-container h6 {
   margin-top: 2px;
   font-size: 12px; }
 
@@ -221,24 +221,22 @@
   .fm-accept-product-export .controls button {
     display: inline-block; }
 
-#fm-container {
+.fm-container {
   position: relative;
   width: 920px;
   margin: 0 auto;
   overflow: hidden; }
-  #fm-container .fyndiqlogo {
+  .fm-container .fyndiqlogo {
     display: block;
     margin: 10px auto;
     width: 160px; }
-
-#fm-main-panel {
-  float: left;
-  width: 660px; }
-
-#fm-sidebar {
-  float: left;
-  width: 245px;
-  margin-left: 15px; }
+  .fm-container .fm-main-panel {
+    float: left;
+    width: 660px; }
+  .fm-container .fm-sidebar {
+    float: left;
+    width: 245px;
+    margin-left: 15px; }
 
 .fm-api-unavailable {
   text-align: center;
