--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -108,6 +108,10 @@
 .fm-container h6 {
   margin-top: 2px;
   font-size: 12px; }
+.fm-container ul {
+  padding: 0;
+  margin: 0;
+  list-style: none; }
 
 .fm-form {
   margin: 20px 0;
