--- a/fyndiqmerchant/backoffice/frontend/css/style.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/style.scss
@@ -33,6 +33,12 @@
         margin-top: 2px;
         font-size: 12px;
     }
+
+    ul {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
 }
 
 .fm-form {
