--- a/fyndiqmerchant/backoffice/frontend/css/style.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/style.scss
@@ -46,7 +46,19 @@
     padding: 0;
 
     fieldset {
+        border: none;
+        background-color: transparent;
         padding: 0 10px 10px 10px;
+
+        legend {
+          font-size:1.4em;
+          padding: 0px;
+        }
+    }
+
+    legend {
+        border: none;
+        background-color: transparent;
     }
 
     label {
