--- a/fyndiqmerchant/backoffice/frontend/css/main.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/main.scss
@@ -2,8 +2,8 @@
 // If you're wondering why a lot of things are prefixed with 'fm-'
 // it's because PrestaShop defines style for lots of common words like 'error' and 'info'
 
-@import 'colors.scss';
-@import 'mixins.scss';
-@import 'overlays.scss';
-@import 'style.scss';
-@import 'layout.scss';
+@import 'colors';
+@import 'mixins';
+@import 'overlays';
+@import 'style';
+@import 'layout';
