--- a/fyndiqmerchant/backoffice/frontend/css/layout.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/layout.scss
@@ -147,6 +147,53 @@
     }
 }
 
+.fm-menu {
+  width:99%;
+  clear:both;
+  padding-left:4px;
+  padding-right: -4px;
+  margin-bottom: 10px;
+  height:40px;
+  @include gradient(#fec600,#f39e0a);
+  @include border-radius(3px);
+  @include shadow(#ba7a01);
+  ul {
+    list-style: none;
+    float:left;
+    li {
+      float: left;
+      display: inline-block;
+      height:40px;
+      padding-left:5px;
+      padding-right:5px;
+      a {
+        text-decoration: none;
+        height: 25px;
+        display: inline-block;
+        padding: 5px;
+        padding-top:10px;
+        text-align: center;
+        font-size:10pt;
+        color:white;
+        text-shadow: 1px 1px 1px #ba7a01;
+        &:hover {
+          @include gradient(#f39e0a,#fec600);
+          @include innershadow(#ba7a01, 6px);
+        }
+        &.active {
+          @include gradient(#de981f,#f39e0a);
+          @include innershadow(#ba7a01, 6px);
+        }
+      }
+      &:last-child {
+      }
+    }
+    &.right {
+      float: right;
+    }
+  }
+}
+
 
 .fm-product-list {
     margin: 0;
