--- a/fyndiqmerchant/backoffice/frontend/css/mixins.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/mixins.scss
@@ -30,8 +30,19 @@
     -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000, endColorstr=#66000000);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000, endColorstr=#66000000);
 
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     z-index: 999;
+}
+
+@mixin innershadow($color, $size) {
+  -moz-box-shadow:    inset 0 0 $size $color;
+  -webkit-box-shadow: inset 0 0 $size $color;
+  box-shadow:         inset 0 0 $size $color;
+}
+@mixin shadow($color) {
+  -webkit-box-shadow: 1px 1px 0px 0px $color;
+  -moz-box-shadow: 1px 1px 0px 0px $color;
+  box-shadow: 1px 1px 0px 0px $color;
 }
