moved products to table

--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -266,10 +266,10 @@
     margin-right: 15px; }
   .fm-container .fm-main-panel {
     float: left;
-    width: 660px; }
+    width: 730px; }
   .fm-container .fm-sidebar {
     float: left;
-    width: 245px;
+    width: 175px;
     margin-left: 15px; }
 
 .fm-api-unavailable {
@@ -395,10 +395,8 @@
           font-size: 13px;
           font-weight: normal; }
     .fm-product-list .product .select {
-      float: left;
       margin: 15px 5px 0; }
     .fm-product-list .product .image {
-      float: left;
       width: 50px;
       height: 50px; }
       .fm-product-list .product .image label {
@@ -409,75 +407,75 @@
         .fm-product-list .product .image label img {
           display: block;
           margin: 0 auto;
-          max-width: 50px;
           max-height: 50px; }
-    .fm-product-list .product .prices {
+    .fm-product-list .product .prices label {
+      display: block;
+      text-align: right;
+      margin-right: 5px;
+      float: left; }
+    .fm-product-list .product .prices input {
+      display: block;
       float: left;
-      margin-left: 10px; }
-      .fm-product-list .product .prices label {
-        display: block;
-        text-align: right;
-        margin-right: 5px;
-        float: left; }
-      .fm-product-list .product .prices input {
-        display: block;
-        float: left;
-        width: 100px; }
+      width: 30px; }
+    .fm-product-list .product .prices .price_preview {
+      display: block;
+      clear: both; }
     .fm-product-list .product .quantities {
-      float: left;
       margin-left: 20px; }
     .fm-product-list .product .status {
-      float: left;
       margin-left: 20px; }
-    .fm-product-list .product .expand {
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      width: 28px;
-      height: 28px; }
-      .fm-product-list .product .expand img {
-        display: block;
-        width: 28px;
-        height: 28px; }
-      .fm-product-list .product .expand.inactive {
-        opacity: 0.2;
-        filter: alpha(opacity=20); }
-        .fm-product-list .product .expand.inactive a {
-          cursor: default; }
-  .fm-product-list .combinations {
-    padding-left: 8px;
-    margin-top: 3px; }
-    .fm-product-list .combinations > li {
-      overflow: hidden;
-      padding: 3px 0;
-      border-bottom: 1px solid #ccc; }
-      .fm-product-list .combinations > li:last-child {
-        border: none; }
-      .fm-product-list .combinations > li .select {
-        float: left;
-        margin: 8px 5px 0; }
-      .fm-product-list .combinations > li .image {
-        float: left;
-        width: 30px;
-        height: 30px; }
-        .fm-product-list .combinations > li .image img {
-          display: block;
-          margin: 0 auto;
-          max-width: 30px;
-          max-height: 30px; }
-      .fm-product-list .combinations > li .data {
-        float: left;
-        margin-left: 5px;
-        width: 550px; }
-        .fm-product-list .combinations > li .data .attributes {
-          list-style: none;
-          padding: 0;
-          margin: 0;
-          overflow: hidden; }
-          .fm-product-list .combinations > li .data .attributes li {
-            float: left; }
-            .fm-product-list .combinations > li .data .attributes li:last-child .separator {
-              display: none; }
+
+table tr:first-child th:first-child,
+table.Info tr:first-child td:first-child {
+  border-top-left-radius: 4px; }
+
+table tr:first-child th:last-child,
+table.Info tr:first-child td:last-child {
+  border-top-right-radius: 4px; }
+
+/* bottom-left border-radius */
+table tr:last-child td:first-child {
+  border-bottom-left-radius: 4px; }
+
+table {
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px; }
+  table thead {
+    font-size: 10pt;
+    text-shadow: 1px 1px 1px #ba7a01;
+    background-color: #f39e09;
+    border: 0px;
+    border-spacing: 0; }
+    table thead th {
+      border: 0px;
+      color: white;
+      padding: 6px;
+      border-spacing: 0;
+      border-collapse: collapse; }
+  table tbody {
+    border: 0px;
+    border-collapse: collapse;
+    font-size: 8pt; }
+    table tbody tr {
+      padding: 4px;
+      border: 0px;
+      border-collapse: collapse;
+      border-spacing: 0; }
+      table tbody tr:nth-child(2n) {
+        background-color: #f5f5f5; }
+      table tbody tr:last-child {
+        border-bottom-right-radius: 4px; }
+      table tbody tr td {
+        padding: 4px;
+        border: 0px;
+        border-spacing: 0;
+        border-collapse: collapse; }
+        table tbody tr td img {
+          max-height: 80px; }
 
 .label {
   display: block;
