--- a/fyndiqmerchant/backoffice/frontend/css/layout.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/layout.scss
@@ -94,12 +94,12 @@
 
     .fm-main-panel {
         float: left;
-        width: 660px;
+        width: 730px;
     }
 
     .fm-sidebar {
         float: left;
-        width: 245px;
+        width: 175px;
         margin-left: 15px;
     }
 }
@@ -236,12 +236,10 @@
         }
 
         .select {
-            float: left;
             margin: 15px 5px 0;
         }
 
         .image {
-            float: left;
             width: 50px;
             height: 50px;
 
@@ -254,15 +252,12 @@
                 img {
                     display: block;
                     margin: 0 auto;
-                    max-width: 50px;
                     max-height: 50px;
                 }
             }
         }
 
         .prices {
-            float: left;
-            margin-left: 10px;
 
 
 
@@ -276,97 +271,88 @@
             input {
                 display: block;
                 float: left;
-                width: 100px;
+                width: 30px;
+            }
+
+            .price_preview {
+              display: block;
+              clear: both;
             }
         }
 
         .quantities {
-            float: left;
             margin-left: 20px;
         }
 
         .status {
-          float: left;
           margin-left: 20px;
         }
+    }
+}
+table tr:first-child th:first-child,
+table.Info tr:first-child td:first-child {
+  border-top-left-radius: 4px;
+}
+table tr:first-child th:last-child,
+table.Info tr:first-child td:last-child {
+  border-top-right-radius: 4px;
+}
+/* bottom-left border-radius */
+table tr:last-child td:first-child {
+  border-bottom-left-radius: 4px;
+}
+table {
+  width:100%;
+  border-spacing: 0;
+  border-collapse: collapse;
 
-        .expand {
-            position: absolute;
-            right: 0;
-            bottom: 0;
-            width: 28px;
-            height: 28px;
+  @include border-radius(3px);
 
-            img {
-                display: block;
-                width: 28px;
-                height: 28px;
-            }
+  thead {
+    font-size:10pt;
+    text-shadow: 1px 1px 1px #ba7a01;
+    background-color: #f39e09;
+    border:0px;
+    border-spacing: 0;
 
-            &.inactive {
-                opacity: 0.2;
-                filter: alpha(opacity=20);
-                a {
-                    cursor: default;
-                }
-            }
-        }
+    th {
+      border:0px;
+      color:white;
+      padding:6px;
+      border-spacing: 0;
+      border-collapse: collapse;
     }
 
-    .combinations {
-        padding-left: 8px;
-        margin-top: 3px;
+  }
+  tbody {
+    border:0px;
+    border-collapse: collapse;
+    font-size:8pt;
 
-        > li {
-            overflow: hidden;
-            padding: 3px 0;
-            border-bottom: 1px solid $color-item-light;
+    tr {
+      padding:4px;
+      border:0px;
+      border-collapse: collapse;
+      border-spacing: 0;
 
-            &:last-child {
-                border: none;
-            }
+      &:nth-child(2n) {
+        background-color: $color-item-lighter;
+      }
+      &:last-child {
+        border-bottom-right-radius: 4px;
+      }
 
-            .select {
-                float: left;
-                margin: 8px 5px 0;
-            }
-
-            .image {
-                float: left;
-                width: 30px;
-                height: 30px;
-
-                img {
-                    display: block;
-                    margin: 0 auto;
-                    max-width: 30px;
-                    max-height: 30px;
-                }
-            }
-
-            .data {
-                float: left;
-                margin-left: 5px;
-                width: 550px;
-
-                .attributes {
-                    list-style: none;
-                    padding: 0;
-                    margin: 0;
-                    overflow: hidden;
-
-                    li {
-                        float: left;
-                        &:last-child {
-                            .separator {
-                                display: none;
-                            }
-                        }
-                    }
-                }
-            }
+      td {
+        padding:4px;
+        border:0px;
+        border-spacing: 0;
+        border-collapse: collapse;
+        img {
+          max-height: 80px;
         }
+      }
     }
+  }
 }
 .label {
   display:block;
