fixed order details

--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -455,7 +455,8 @@ table {
       color: white;
       padding: 6px;
       border-spacing: 0;
-      border-collapse: collapse; }
+      border-collapse: collapse;
+      text-align: left; }
   table tbody {
     border: 0px;
     border-collapse: collapse;
