--- a/fyndiqmerchant/backoffice/frontend/css/layout.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/layout.scss
@@ -1,417 +1,627 @@
+#content {
+  padding-right: 0px;
+  padding-top: 55px;
+}
+
+#content {
+  margin: 0px !important;
+  background-color: rgb(231, 238, 244) !important;
+  padding-bottom: 20px;
+}
 
 .fm-accept-product-export {
-    h3 {
-        margin: 0;
-    }
-
-    ul {
-        list-style: none;
-        padding: 0;
-        margin: 8px 0;
-
-        > li {
-            overflow: hidden;
-            background-color: $color-item-lighter;
-            margin-bottom: 2px;
-            padding: 2px;
-            font-size: 12px;
-
-            &:last-child {
-                margin-bottom: 0;
-            }
-
-            .image {
-                float: left;
-                width: 35px;
-                height: 35px;
-
-                img {
-                    display: block;
-                    margin: 0 auto;
-                    max-width: 35px;
-                    max-height: 35px;
-                }
-            }
-
-            .data {
-                margin-left: 3px;
-                float: left;
-                .title {
-                    h3 {
-                        margin: 0;
-                        font-size: 13px;
-                    }
-                }
-                .price-info {
-                    .highest-price {
-                        float: left;
-                    }
-                    .lowest-price {
-                        float: left;
-                        margin-left: 5px;
-                    }
-                }
-            }
-
-            .final-price {
-                line-height: 35px;
-                float: right;
-                input {
-                    margin-top: 7px;
-                    margin-left: 3px;
-                }
-            }
-        }
-    }
-
-    .controls {
-
-        text-align: right;
-        button {
-            display: inline-block;
-        }
-    }
-}
-
-
-.fm-container {
-    position: relative;
-    width: 920px;
-    margin: 0 auto;
-    overflow: hidden;
-
-    .fyndiqlogo {
-        display: block;
-        margin: 10px auto;
-        width: 160px;
-    }
-
-    .fm-category-sidebar {
-        width:140px;
-        float: left;
-        margin-right: 15px;
-    }
-
-    .fm-main-panel {
-        float: left;
-        width: 730px;
-    }
-
-    .fm-sidebar {
-        float: left;
-        width: 175px;
-        margin-left: 15px;
-    }
-}
-
-
-.fm-api-unavailable {
-    text-align: center;
-    font-size: 14px;
-}
-
-
-.fm-category-tree-container {
-  clear:both;
-  display: block;
-}
-
-.fm-category-tree {
+  h3 {
     margin: 0;
-    padding: 0;
-    list-style: none;
-    display: block;
-    li.active {
-        font-weight: bold;
-    }
-}
-
-
-.fm-product-list-container {
-    margin: 10px 0;
-}
-
-
-.fm-product-list-controls {
-    overflow: hidden;
-    margin: 10px 0;
-
-    .select {
-        float: left;
-        margin: 0;
-    }
-
-    .export {
-        float: right;
-        margin: 0;
-    }
-}
-
-.fm-menu {
-  width:99%;
-  clear:both;
-  padding-left:4px;
-  padding-right: -4px;
-  margin-bottom: 10px;
-  height:40px;
-  @include gradient(#fec600,#f39e0a);
-  @include border-radius(3px);
-  @include shadow(#ba7a01);
+  }
   ul {
     list-style: none;
-    float:left;
-    li {
-      float: left;
-      display: inline-block;
-      height:40px;
-      padding-left:5px;
-      padding-right:5px;
-      a {
-        text-decoration: none;
-        height: 25px;
-        display: inline-block;
-        padding: 5px;
-        padding-top:10px;
-        text-align: center;
-        font-size:10pt;
-        color:white;
-        text-shadow: 1px 1px 1px #ba7a01;
-        &:hover {
-          @include gradient(#f39e0a,#fec600);
-          @include innershadow(#ba7a01, 6px);
-        }
-        &.active {
-          @include gradient(#de981f,#f39e0a);
-          @include innershadow(#ba7a01, 6px);
+    padding: 0;
+    margin: 8px 0;
+
+    > li {
+      overflow: hidden;
+      background-color: $color-item-lighter;
+      margin-bottom: 2px;
+      padding: 2px;
+      font-size: 12px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      .image {
+        float: left;
+        width: 35px;
+        height: 35px;
+
+        img {
+          display: block;
+          margin: 0 auto;
+          max-width: 35px;
+          max-height: 35px;
         }
       }
-      &:last-child {
+
+      .data {
+        margin-left: 3px;
+        float: left;
+        .title {
+          h3 {
+            margin: 0;
+            font-size: 13px;
+          }
+        }
+        .price-info {
+          .highest-price {
+            float: left;
+          }
+          .lowest-price {
+            float: left;
+            margin-left: 5px;
+          }
+        }
+      }
+
+      .final-price {
+        line-height: 35px;
+        float: right;
+        input {
+          margin-top: 7px;
+          margin-left: 3px;
+        }
       }
     }
-    &.right {
-      float: right;
+  }
+
+  .description-container {
+    clear: both;
+    display: none;
+    padding: 4px;
+
+    textarea {
+      width: 99%;
+      min-height: 100px;
+    }
+  }
+
+  .controls {
+
+    text-align: right;
+    button {
+      display: inline-block;
     }
   }
 }
 
+.fm-left-sidebar {
+  width: 240px;
+  float: left;
+  border-radius: 2px;
+  margin-right: 10px;
+  background-color: white;
+}
+.fm-header-background {
+  background-color: white;
+  .fm-header-container {
+    position: relative;
+    width: 950px;
+    margin: 0 auto;
+    overflow: hidden;
+    .fm-header {
+      clear: both;
+      width: 960px;
+      display: block;
+      margin-top:15px;
+      margin-bottom:15px;
+      height: 64px;
+
+      .fyndiqlogo {
+        vertical-align: middle;
+        display: table-cell;
+        float: left;
+        width: 141px;
+        height: 61px;
+        &.center {
+          margin: 0 auto;
+          display: block;
+          float:none;
+        }
+      }
+      .right {
+        float:right;
+        padding-right:10px;
+        vertical-align: middle;
+        display: table-cell;
+        height:64px;
+        line-height: 64px;
+        a {
+          font-family: 'Montserrat', sans-serif;
+          display:inline-block;
+          padding: 3px 8px;
+          vertical-align: middle;
+          color:black;
+          height:30px;
+          line-height: 30px;
+          font-size:16px;
+          font-weight: 400;
+          background-color:white;
+          text-decoration: none;
+          @include border-radius(5px);
+          border: 2px solid #F0F1F2;;
+        }
+        a i.menu-icon {
+          display: inline-block;
+          vertical-align: middle;
+          margin-bottom: 3px;
+          height:30px;
+          width:30px;
+
+        }
+        a:hover {
+          color:white;
+          background-color: #e85353;
+          border: 2px solid #e85353;
+        }
+        a.active {
+          background-color: #e85353;
+          border: 2px solid #e85353;
+          color:white;
+        }
+      }
+    }
+  }
+}
+.fm-container {
+  position: relative;
+  width: 950px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding-top:30px;
+
+  .fm-main-panel {
+    float: left;
+    color: #333;
+    background-color: white;
+    width: 100%;
+    border-radius: 2px;
+    .info {
+      color:#333;
+      font-size: 10pt;
+      padding-left:10px;
+      padding-bottom:15px;
+      float:left;
+    }
+
+    .content {
+      width:100%;
+      height:100%;
+      padding:10px;
+      text-align:center;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 400;
+      font-size:13px;
+    }
+  }
+
+  .fm-product-panel {
+    float: left;
+    color: #333;
+    background-color: white;
+    width: 700px;
+    border-radius: 2px;
+    .info {
+      color:#333;
+      font-size: 10pt;
+      padding-left:10px;
+      padding-bottom:15px;
+      float:left;
+    }
+    .notext {
+      margin-left:10px;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 400;
+      font-size:11px;
+    }
+  }
+
+  .fm-orderlist-panel {
+    float: left;
+    color: #333;
+    background-color: white;
+    border-radius: 2px;
+    width: 720px;
+  }
+
+  .fm-sidebar {
+    float: left;
+    background-color: white;
+    width: 240px;
+    border-radius: 2px;
+    margin-left: 10px;
+  }
+}
+
+.fm-api-unavailable {
+  text-align: center;
+  font-size: 14px;
+}
+
+.fm-subheader {
+  background-color: #799ec4;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  height: 30px;
+  font-size: 18px;
+  line-height: 30px;
+  color: white;
+  padding-left: 10px;
+  padding-bottom: 8px;
+  padding-top: 8px;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+  .right {
+    float: right;
+    padding-right: 15px;
+    font-size: 11px;
+    .icon {
+      margin-bottom: 2px;
+      margin-left: 8px;
+    }
+  }
+}
+
+.icon {
+  display:inline-block;
+  @include border-radius(50%);
+  height:13px;
+  width:13px;
+  border:3px solid white;
+  vertical-align: middle;
+  &.pending {
+    background-color: #f08c48;
+  }
+  &.on {
+    background-color: #83c070;
+  }
+  &.noton {
+    background-color: #e85353;
+  }
+  &.big {
+    height:20px;
+    width:20px;
+  }
+}
+
+.fm-category-tree {
+  margin: 0;
+  padding: 0;
+
+  li {
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #F0F1F2;
+    font-weight: bold;
+    a {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 400;
+      font-size: 12px;
+      text-decoration: none;
+      color: #333;
+      &:hover {
+        color: #f08c48;
+      }
+    }
+  }
+  li.active {
+    a {
+      color: #f08c48;
+    }
+  }
+  li:last-child {
+    border-bottom: none;
+  }
+}
+
+.fm-product-list-container {
+}
+
+.fm-products-list-container {
+  clear: both;
+  min-height: 40px;
+}
+
+.fm-product-list-controls {
+  overflow: hidden;
+  margin-bottom:10px;
+  margin-top:10px;
+  margin-right:12px;
+  width: 270px;
+  float: right;
+
+  .select {
+    float: left;
+    margin: 0;
+  }
+
+  .export {
+    float: right;
+    margin: 0;
+  }
+}
+.center {
+  text-align: center;
+}
+.content {
+  width:240px;
+  height:100%;
+  padding:10px;
+}
+
+.fm-order-list-controls {
+  overflow: hidden;
+  margin-bottom:10px;
+  margin-top:10px;
+  margin-right:12px;
+  width: 270px;
+  float: right;
+
+  .select {
+    float: left;
+    margin: 0;
+  }
+
+  .export {
+    float: right;
+    margin: 0;
+  }
+}
 
 .fm-product-list {
-    margin: 0;
-    padding: 2px;
-  
-    > li {
-        overflow: hidden;
-        //background-color: $color-item-lighter;
-        background-color: transparent;
-        margin-bottom: 5px;
-        padding: 5px;
-        padding-bottom: 10px;
-        //border-left: 2px solid $color-item-darker;
-        margin-bottom: 5px;
-        padding: 5px;
+  margin: 0;
+  padding: 2px;
 
-        &:nth-child(2n) {
-          background-color: $color-item-lighter;
-        }
+  > li {
+    overflow: hidden;
+    background-color: $color-item-lighter;
+    margin-bottom: 5px;
+    padding: 3px;
+    border: 1px solid $color-item-darker;
+    border-left: 2px solid $color-item-darker;
 
-        &:last-child {
-            margin-bottom: 0;
-        }
+    &:last-child {
+      margin-bottom: 0;
     }
-    .product {
-        position: relative;
-        overflow: hidden;
+  }
+  .product {
 
-        .title {
-            margin-bottom: 5px;
+    .title {
 
-            h4 {
-                font-size: 14px;
-                margin: 0;
-                .reference {
-                    font-size: 13px;
-                    font-weight: normal;
-                }
-            }
+      h4 {
+        font-size: 14px;
+        margin: 0;
+        .reference {
+          font-size: 13px;
+          font-weight: normal;
         }
-
-        .select {
-            margin: 15px 5px 0;
-        }
-
-        .image {
-            width: 50px;
-            height: 50px;
-
-            label {
-                display: block;
-                width: 100%;
-                height: 100%;
-                padding: 0;
-
-                img {
-                    display: block;
-                    margin: 0 auto;
-                    max-height: 50px;
-                }
-            }
-        }
-
-        .prices {
-
-
-
-            label {
-                display: block;
-                text-align: right;
-                margin-right:5px;
-                float: left;
-            }
-
-            input {
-                display: block;
-                float: left;
-                width: 30px;
-            }
-
-            .price_preview {
-              display: block;
-              clear: both;
-            }
-        }
-
-        .quantities {
-            margin-left: 20px;
-        }
-
-        .status {
-          margin-left: 20px;
-        }
+      }
     }
+
+    .select {
+    }
+
+    .image {
+      float: left;
+      width: 50px;
+      height: 50px;
+
+      label {
+        display: block;
+        width: 100%;
+        height: 100%;
+        padding: 0;
+
+        img {
+          display: block;
+          margin: 0 auto;
+          max-width: 50px;
+          max-height: 50px;
+        }
+      }
+    }
+
+
+
+    .prices {
+
+      .price {
+        margin-bottom: 2px;
+      }
+
+      .fyndiq_price {
+        clear: both;
+      }
+
+      span.pricetag {
+        float: right;
+      }
+
+      .inputdiv {
+        float: right;
+        height: 15px;
+        background-color: #F4F4F4;
+        padding: 0px;
+        line-height: 15px;
+        padding-right: 3px;
+        border: 1px solid #DADADA;
+        margin: 0px;
+        input {
+          border: 0px;
+          height: 11px;
+          width: 20px;
+          margin: 0px;
+          line-height: 14px;
+          padding: 2px;
+          border-right: 1px solid #DADADA;
+          margin-right: 3px;
+          margin-top: -2px;
+        }
+      }
+
+      label {
+        display: block;
+        text-align: right;
+        float: left;
+        padding-right: 4px;
+      }
+      .price_preview {
+        float:right;
+      }
+    }
+  }
 }
+
 table tr:first-child th:first-child,
 table.Info tr:first-child td:first-child {
   border-top-left-radius: 4px;
 }
+
 table tr:first-child th:last-child,
 table.Info tr:first-child td:last-child {
   border-top-right-radius: 4px;
 }
+
 /* bottom-left border-radius */
 table tr:last-child td:first-child {
   border-bottom-left-radius: 4px;
 }
+
 table {
-  width:100%;
+  font-family: 'Montserrat', sans-serif;
+  width: 100%;
   border-spacing: 0;
   border-collapse: collapse;
 
   @include border-radius(3px);
 
   thead {
-    font-size:10pt;
-    text-shadow: 1px 1px 1px #ba7a01;
-    background-color: #f39e09;
-    border:0px;
+    font-size: 12px;
+    background-color: #f5f8fb;
+    border: 0px;
+    border-bottom: 1px solid #F0F1F2;
+    border-top: 1px solid #F0F1F2;
     border-spacing: 0;
 
     th {
-      border:0px;
-      color:white;
-      padding:6px;
+      font-size: 12px;
+      font-weight: 400;
+      border: 0px;
+      color: black;
+      text-align: center;
+      padding: 6px;
       border-spacing: 0;
       border-collapse: collapse;
-      text-align: left;
     }
 
   }
   tbody {
-    border:0px;
+    border: 0px;
     border-collapse: collapse;
-    font-size:8pt;
+    font-size: 8pt;
 
     tr {
-      padding:4px;
-      border:0px;
+      padding: 10px;
+      border: 0px;
       border-collapse: collapse;
       border-spacing: 0;
-
-      &:nth-child(2n) {
-        background-color: $color-item-lighter;
-      }
-      &:last-child {
-        border-bottom-right-radius: 4px;
-      }
+      border-bottom: 1px solid #F0F1F2;
 
       td {
-        padding:4px;
-        border:0px;
+        padding: 10px;
+        font-size: 11px;
+        font-weight: 400;
+        border: 0px;
+        color:#333;
         border-spacing: 0;
         border-collapse: collapse;
         img {
           max-height: 80px;
+          border: 1px solid rgb(229,232,234);
+        }
+        .shadow {
+          color:#999;
+        }
+        &.center {
+          text-align: center;
         }
       }
     }
   }
 }
-.label {
-  display:block;
-  padding:4px;
-  text-align: center;
-  @include border-radius(3px);
-  color:white;
-  &.green {
-    background-color: #298724;
-  }
-  &.yellow {
-    background-color: #B3B835;
-  }
-}
+
 .pages {
   margin: 10px 0;
-  width:550px;
-  float:left;
+  width: 550px;
+  float: left;
   ol {
-    float:left;
-    list-style: none;
+    float: left;
+    margin-left:15px;
     li {
-      float:left;
-      margin-right:5px;
+      float: left;
+      list-style: none;
+      margin-right: 5px;
       &.current {
-        border: 1px solid #a5a5a5;
-        padding: 6px 6px;
-        font-size: 12px;
+        font-family: 'Montserrat', sans-serif;
+        padding: 8px 12px;
+        font-size: 11pt;
         color: white;
         outline: none;
         text-decoration: none;
         line-height: 16px;
-        text-shadow: 1px 1px 1px #ba7a01;
         @include border-radius(3px);
-        @include gradient(#de981f,#f39e0a);
-        @include innershadow(#ba7a01, 6px);
-        display:inline-block;
+        background-color: #f08c48;
+        display: inline-block;
       }
       a {
-        border: 1px solid #a5a5a5;
-        padding: 6px 6px;
-        font-size: 12px;
+        font-family: 'Montserrat', sans-serif;
+        padding: 8px 12px;
+        font-size: 11pt;
         color: black;
         cursor: pointer;
         outline: none;
         text-decoration: none;
         line-height: 16px;
-        display:inline-block;
+        display: inline-block;
+        background-color: #e3e3e3;
         @include border-radius(3px);
-        &:active {
-          @include gradient($color-button-dark, $color-button-light);
-        }
         &:hover {
           text-decoration: none;
-          color: black;
-          @include gradient($color-button-dark, $color-button-light);
+          color: white;
+          background-color: #f08c48;
         }
       }
     }
+  }
+}
+.lastupdated {
+  padding:10px;
+  margin-bottom:10px;
+  margin-top:10px;
+  height:41px;
+  line-height: 21px;
+  background-color: #f5f8fb;
+  font-size: 12px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  img {
+    float:left;
+    margin-right:10px;
+  }
+  .last-header{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    margin-bottom: -5px;
+    margin-top: 3px;
+    display:block;
   }
 }
