--- a/fyndiqmerchant/backoffice/frontend/css/overlays.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/overlays.scss
@@ -1,97 +1,75 @@
 
+.fm-loading-overlay {
+  @include overlay;
 
-    .fm-loading-overlay {
-        @include overlay;
+  img {
+    width: 128px;
+    height: 128px;
+    display: block;
+    margin: 150px auto;
+  }
+}
 
-        img {
-            width: 128px;
-            height: 128px;
-            display: block;
-            margin: 150px auto;
-        }
-    }
+.fm-message-overlay {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  // http://www.red-team-design.com/cool-notification-messages-with-css3-jquery
+  box-shadow: inset 0 -1px 0 rgba(255, 255, 255, .3);
+  width: 100%;
+  color: white;
+  padding: 30px 0;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  _position: absolute;
+  border: none !important;
 
-    .fm-modal-overlay {
-        @include overlay;
+  //text-shadow: 0 1px 0 rgba(0, 0, 0, .5);
+  //animation: animate-bg 5s linear infinite;
 
-        .container {
-            @include border-radius(4px);
+  &.fm-info {
+    background-color: #799ec4;
+    border-color: #87acd3;
+  }
+  &.fm-error {
+    background-color: #e85353;
+    border-color: #f55454;
+  }
+  &.fm-warning {
+    background-color: #f08c48;
+    border-color: #fa9549;
+  }
+  &.fm-success {
+    background-color: #83c070;
+    border-color: #9bde87;
+  }
 
+  .close {
+    display: block;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+  }
 
-            background: $color-modal-light;
+  h3 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    width: 920px;
+    margin: 0 auto 5px;
+    color: white;
+    font-size: 16px;
+  }
 
-            width: 600px;
-            margin: 50px auto;
-            padding: 15px;
-
-            h3 {
-                font-size: 18px;
-            }
-
-            .content {
-                min-height: 200px;
-                font-size: 14px;
-            }
-        }
-    }
-    
-    .fm-message-overlay {
-
-        // http://www.red-team-design.com/cool-notification-messages-with-css3-jquery
-        background-size: 40px 40px;
-        background-image: linear-gradient(135deg, rgba(255, 255, 255, .05) 25%, transparent 25%,
-            transparent 50%, rgba(255, 255, 255, .05) 50%, rgba(255, 255, 255, .05) 75%,
-            transparent 75%, transparent);
-        box-shadow: inset 0 -1px 0 rgba(255,255,255,.4);
-        width: 100%;
-        color: white;
-        padding: 30px 0;
-        position: fixed;
-        z-index: 999;
-        top: 0;
-        left: 0;
-        _position: absolute;
-        text-shadow: 0 1px 0 rgba(0,0,0,.5);
-        animation: animate-bg 5s linear infinite;
-
-        &.fm-info {
-             background-color: #4ea5cd;
-             border-color: #3b8eb5;
-        }
-        &.fm-error {
-            background-color: #de4343;
-            border-color: #c43d3d;
-        }
-        &.fm-warning {
-            background-color: #eaaf51;
-            border-color: #d99a36;
-        }
-        &.fm-success {
-            background-color: #61b832;
-            border-color: #55a12c;
-        }
-
-        .close {
-            display: block;
-            position: absolute;
-            top: 15px;
-            right: 15px;
-            width: 30px;
-            height: 30px;
-            cursor: pointer;
-        }
-
-        h3 {
-            width: 920px;
-            margin: 0 auto 5px;
-            color: white;
-            font-size: 16px;
-        }
-
-        p {
-            width: 920px;
-            margin: 0 auto;
-            color: white;
-            font-size: 14px;
-        }
-    }
+  p {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    width: 920px;
+    margin: 0 auto;
+    color: white;
+    font-size: 14px;
+  }
+}
