--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -138,7 +138,7 @@
     .fm-button.red:hover {
       font-weight: bold; }
   .fm-button.block {
-    width: 216px;
+    width: 196px;
     text-align: center; }
 
 #content {
@@ -319,7 +319,7 @@
     color: #333;
     background-color: white;
     border-radius: 2px;
-    width: 720px; }
+    width: 700px; }
   .fm-container .fm-sidebar {
     float: left;
     background-color: white;
@@ -415,7 +415,7 @@
   text-align: center; }
 
 .content {
-  width: 240px;
+  width: 220px;
   height: 100%;
   padding: 10px; }
 
@@ -562,11 +562,13 @@ table {
 
 .pages {
   margin: 10px 0;
-  width: 550px;
+  width: 400px;
   float: left; }
   .pages ol {
     float: left;
-    margin-left: 15px; }
+    margin: 0px;
+    margin-left: 15px;
+    padding: 0px; }
     .pages ol li {
       float: left;
       list-style: none;
