--- a/fyndiqmerchant/backoffice/frontend/css/layout.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/layout.scss
@@ -2,11 +2,14 @@
   padding-right: 0px;
   padding-top: 55px;
 }
+.page-sidebar #content {
+  margin-left:150px;
+}
 
 #content {
-  margin: 0px !important;
   background-color: rgb(231, 238, 244) !important;
   padding-bottom: 20px;
+
 }
 
 .fm-accept-product-export {
