--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -145,8 +145,10 @@
   padding-right: 0px;
   padding-top: 55px; }
 
+.page-sidebar #content {
+  margin-left: 150px; }
+
 #content {
-  margin: 0px !important;
   background-color: #e7eef4 !important;
   padding-bottom: 20px; }
 
