Restructured the form; Added css rules for the settings form;

--- a/fyndiqmerchant/backoffice/frontend/css/layout.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/layout.scss
@@ -644,3 +644,12 @@ table {
     display:block;
   }
 }
+.nobootstrap .form-group {
+  label {
+    width: 48%;
+  }
+  input, select {
+    margin-left: .4em;
+    float: left;
+  }
+}
