Added Disconnect account link; Added css.map to .gitignore

--- a/fyndiqmerchant/backoffice/frontend/css/layout.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/layout.scss
@@ -653,3 +653,14 @@ table {
     float: left;
   }
 }
+
+.text-right {
+  text-align: right;
+}
+
+.fm-disconnect {
+  width: 98%;
+  a{
+    color: #e85353;
+  }
+}
