--- a/fyndiqmerchant/backoffice/frontend/css/main.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/main.scss
@@ -3,6 +3,7 @@
 // it's because PrestaShop defines style for lots of common words like 'error' and 'info'
 
 @import 'colors';
+@import 'typography';
 @import 'mixins';
 @import 'overlays';
 @import 'style';
