Settings page is looking almost ok

--- a/fyndiqmerchant/backoffice/frontend/css/_colors.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_colors.scss
@@ -10,13 +10,13 @@ $color-pending: #f08c48;
 $color-enabled: #83c070;
 $color-inactive: #e85353;
 
-// Dialog
-$color-dialog-header-background: #799ec4;
-$color-dialog-header-text: $color-light;
-$color-dialog-body-background: $color-light;
-$color-dialog-body-text: $color-dark;
-$color-dialog-footer-background: #f5f9fc;
-$color-dialog-footer-text: $color-dark;
+// Panel
+$color-panel-header-background: #799ec4;
+$color-panel-header-text: $color-light;
+$color-panel-body-background: $color-light;
+$color-panel-body-text: $color-dark;
+$color-panel-footer-background: #f5f9fc;
+$color-panel-footer-text: $color-dark;
 
 // Buttons
 $color-button-primary-background: $color-enabled;
