--- a/fyndiqmerchant/backoffice/frontend/css/_typography.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_typography.scss
@@ -1,9 +1,9 @@
 $font-family-default: 'Montserrat', sans-serif;
 $font-text-default: 13pt;
 
-// Dialog
+// Panel
 
-$font-size-dialog-header: 20pt;
+$font-size-panel-header: 20pt;
 
 // Navigation
 
